nuevos estilos y nuevas implementaciones

--- a/src/components/ButtonCV.astro
+++ b/src/components/ButtonCV.astro
@@ -3,7 +3,7 @@ import FileCv from "./icons/FileCv.astro";
 ---
 
 <div
-  class="fixed inset-0 p-8 backdrop-filter flex justify-center items-center
+  class="z-20 fixed inset-0 p-8 backdrop-filter flex justify-center items-center
     sr-only"
   id="container-cv"
 >
