--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -1,5 +1,5 @@
 <a
-  class="bg-slate-200 text-regular px-3 py-1.5 rounded-md font-semibold
+  class="bg-slate-200 text-regular text-slate-800 px-3 py-1.5 rounded-md font-semibold
             flex items-center justify-center gap-x-2 h-fit
             hover:bg-slate-300 transition-all ease-out"
   href={Astro.props.enlace}
