--- a/src/components/Brand.astro
+++ b/src/components/Brand.astro
@@ -1,5 +1,5 @@
 <img
-  src="/perfil.webp"
+  src="/perfil.jpg"
   class="h-[170px] w-[170px] rounded-full border-4 border-white
             -mt-20"
   alt="Imagen de perfil de portafolio"
