--- a/src/components/CardDetalle.astro
+++ b/src/components/CardDetalle.astro
@@ -8,7 +8,7 @@ import CardContainer from "./CardContainer.astro";
 <CardContainer>
   <h3 class="text-xl font-bold mb-3">Detalles</h3>
   <p class="text-regular text-center">
-    Programador en html
+    programador html
   </p>
 
   <Divider class="mt-5 mb-6" />
@@ -27,7 +27,7 @@ import CardContainer from "./CardContainer.astro";
       href="https://github.com/emaenriquez"
       target="_blank"
       rel="noopener noreferrer"
-      class="flex gap-x-3 text-slate-700 hover:text-slate-700/80 transiton-all ease-in-out duration-200"
+      class="flex gap-x-3 text-slate-700 dark:text-slate-400 hover:text-slate-700/80 dark:hover:text-slate-300 transiton-all ease-in-out duration-200"
     >
       <Github class="size-5" />
       <p>Github</p>
