--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,14 +14,32 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/perfil.jpg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <main class="bg-[#e4e6eb] min-h-screen">
+  <body class="dark:text-white">
+    <main class="bg-[#e4e6eb] dark:bg-slate-900 min-h-screen">
       <slot />
     </main>
   </body>
 </html>
-<style is:global></style>
+<style is:global>
+  html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+  }
+  body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  @media (max-width: 640px) {
+    .text-regular {
+      font-size: 14px;
+    }
+    .text-xl {
+      font-size: 17px;
+      line-height: 20px;
+    }
+  }
+</style>
